exports[`test doesn't render family members if there are none 1`] = `
<div>
<div onClick={[Function]} className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up">
<h6 className="text-dark-secondary flush-bottom display-inline-block">
Filter Transactions
</h6>
<span className="float-right flush-bottom h7" style={{...}}>
Done
</span>
</div>
<div className="one-whole outlined--bottom outlined--light" />
<div className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
<h6 className="push-top soft-half-bottom text-dark-secondary display-inline-block">
Family Member
</h6>
<h6 className="soft-half-top push-top text-dark-secondary display-inline-block">
Choose Date Range
</h6>
<div className="grid one-whole push-top flush-left@palm">
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="Start Date (MM/YY)" type="text" id="start" defaultValue="" onBlur={[Function]} errorText="Please enter a start date" validation={[Function]} />
</div>
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="End Date (MM/YY)" type="text" id="end" defaultValue="" onBlur={[Function]} errorText="Please enter an end date" validation={[Function]} />
</div>
</div>
</div>
</div>
`;

exports[`test renders family members when expanded is true 1`] = `
<div>
<div onClick={[Function]} className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up">
<h6 className="text-dark-secondary flush-bottom display-inline-block">
Filter Transactions
</h6>
<span className="float-right flush-bottom h7" style={{...}}>
Done
</span>
</div>
<div className="one-whole outlined--bottom outlined--light" />
<div className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
<h6 className="push-top soft-half-bottom text-dark-secondary display-inline-block">
Family Member
</h6>
<div style={{...}} className="soft-half-bottom soft-half-left" onClick={[Function]}>
<div className=" display-inline-block outlined" style={{...}} />
<div className="push-left round background--fill display-inline-block" style={{...}} />
<h7 className="soft-half-left">
jim
 
bob
</h7>
</div>
<div style={{...}} className="soft-half-bottom soft-half-left" onClick={[Function]}>
<div className=" display-inline-block outlined" style={{...}} />
<div className="push-left round background--fill display-inline-block" style={{...}} />
<h7 className="soft-half-left">
sally
 
bob
</h7>
</div>
<h6 className="soft-half-top push-top text-dark-secondary display-inline-block">
Choose Date Range
</h6>
<div className="grid one-whole push-top flush-left@palm">
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="Start Date (MM/YY)" type="text" id="start" defaultValue="" onBlur={[Function]} errorText="Please enter a start date" validation={[Function]} />
</div>
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="End Date (MM/YY)" type="text" id="end" defaultValue="" onBlur={[Function]} errorText="Please enter an end date" validation={[Function]} />
</div>
</div>
</div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<div onClick={[Function]} className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up">
<h6 className="text-dark-secondary flush-bottom display-inline-block">
Filter Transactions
</h6>
<span className="float-right flush-bottom icon-filter" style={{...}} />
</div>
<div className="one-whole outlined--bottom outlined--light" />
</div>
`;

exports[`test works with nickname 1`] = `
<div>
<div onClick={[Function]} className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up">
<h6 className="text-dark-secondary flush-bottom display-inline-block">
Filter Transactions
</h6>
<span className="float-right flush-bottom h7" style={{...}}>
Done
</span>
</div>
<div className="one-whole outlined--bottom outlined--light" />
<div className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
<h6 className="push-top soft-half-bottom text-dark-secondary display-inline-block">
Family Member
</h6>
<div style={{...}} className="soft-half-bottom soft-half-left" onClick={[Function]}>
<div className=" display-inline-block outlined" style={{...}} />
<div className="push-left round background--fill display-inline-block" style={{...}} />
<h7 className="soft-half-left">
jimothy
 
bob
</h7>
</div>
<div style={{...}} className="soft-half-bottom soft-half-left" onClick={[Function]}>
<div className=" display-inline-block outlined" style={{...}} />
<div className="push-left round background--fill display-inline-block" style={{...}} />
<h7 className="soft-half-left">
sally
 
bob
</h7>
</div>
<h6 className="soft-half-top push-top text-dark-secondary display-inline-block">
Choose Date Range
</h6>
<div className="grid one-whole push-top flush-left@palm">
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="Start Date (MM/YY)" type="text" id="start" defaultValue="" onBlur={[Function]} errorText="Please enter a start date" validation={[Function]} />
</div>
<div className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
<Input label="End Date (MM/YY)" type="text" id="end" defaultValue="" onBlur={[Function]} errorText="Please enter an end date" validation={[Function]} />
</div>
</div>
</div>
</div>
`;
